1.10.0/_sources/reference/dipy.workflows.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`workflows`
================
.. automodule:: dipy.workflows

.. currentmodule:: dipy.workflows
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.align`
------------------------------
.. automodule:: dipy.workflows.align

.. currentmodule:: dipy.workflows.align
.. autosummary::

   ResliceFlow
   SlrWithQbxFlow
   ImageRegistrationFlow
   ApplyTransformFlow
   SynRegistrationFlow
   MotionCorrectionFlow
   BundleWarpFlow
   check_dimensions


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.base`
-----------------------------
.. automodule:: dipy.workflows.base

.. currentmodule:: dipy.workflows.base
.. autosummary::

   IntrospectiveArgumentParser
   get_args_default
   none_or_dtype


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.cli`
----------------------------
.. automodule:: dipy.workflows.cli

.. currentmodule:: dipy.workflows.cli
.. autosummary::

   run


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.combined_workflow`
------------------------------------------
.. automodule:: dipy.workflows.combined_workflow

.. currentmodule:: dipy.workflows.combined_workflow
.. autosummary::

   CombinedWorkflow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.denoise`
--------------------------------
.. automodule:: dipy.workflows.denoise

.. currentmodule:: dipy.workflows.denoise
.. autosummary::

   Patch2SelfFlow
   NLMeansFlow
   LPCAFlow
   MPPCAFlow
   GibbsRingingFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.docstring_parser`
-----------------------------------------
.. automodule:: dipy.workflows.docstring_parser

.. currentmodule:: dipy.workflows.docstring_parser
.. autosummary::

   Reader
   NumpyDocString
   dedent_lines


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.flow_runner`
------------------------------------
.. automodule:: dipy.workflows.flow_runner

.. currentmodule:: dipy.workflows.flow_runner
.. autosummary::

   get_level
   run_flow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.io`
---------------------------
.. automodule:: dipy.workflows.io

.. currentmodule:: dipy.workflows.io
.. autosummary::

   IoInfoFlow
   FetchFlow
   SplitFlow
   ConcatenateTractogramFlow
   ConvertSHFlow
   ConvertTensorsFlow
   ConvertTractogramFlow
   NiftisToPamFlow
   TensorToPamFlow
   PamToNiftisFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.mask`
-----------------------------
.. automodule:: dipy.workflows.mask

.. currentmodule:: dipy.workflows.mask
.. autosummary::

   MaskFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.multi_io`
---------------------------------
.. automodule:: dipy.workflows.multi_io

.. currentmodule:: dipy.workflows.multi_io
.. autosummary::

   IOIterator
   common_start
   slash_to_under
   connect_output_paths
   concatenate_inputs
   basename_without_extension
   io_iterator


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.nn`
---------------------------
.. automodule:: dipy.workflows.nn

.. currentmodule:: dipy.workflows.nn
.. autosummary::

   EVACPlusFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.reconst`
--------------------------------
.. automodule:: dipy.workflows.reconst

.. currentmodule:: dipy.workflows.reconst
.. autosummary::

   ReconstMAPMRIFlow
   ReconstDtiFlow
   ReconstDsiFlow
   ReconstCSDFlow
   ReconstCSAFlow
   ReconstDkiFlow
   ReconstIvimFlow
   ReconstRUMBAFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.segment`
--------------------------------
.. automodule:: dipy.workflows.segment

.. currentmodule:: dipy.workflows.segment
.. autosummary::

   MedianOtsuFlow
   RecoBundlesFlow
   LabelsBundlesFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.stats`
------------------------------
.. automodule:: dipy.workflows.stats

.. currentmodule:: dipy.workflows.stats
.. autosummary::

   SNRinCCFlow
   BundleAnalysisTractometryFlow
   LinearMixedModelsFlow
   BundleShapeAnalysis
   buan_bundle_profiles


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.tracking`
---------------------------------
.. automodule:: dipy.workflows.tracking

.. currentmodule:: dipy.workflows.tracking
.. autosummary::

   LocalFiberTrackingPAMFlow
   PFTrackingPAMFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.utils`
------------------------------
.. automodule:: dipy.workflows.utils

.. currentmodule:: dipy.workflows.utils
.. autosummary::

   handle_vol_idx


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.viz`
----------------------------
.. automodule:: dipy.workflows.viz

.. currentmodule:: dipy.workflows.viz
.. autosummary::

   HorizonFlow


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.workflow`
---------------------------------
.. automodule:: dipy.workflows.workflow

.. currentmodule:: dipy.workflows.workflow
.. autosummary::

   Workflow



.. currentmodule:: dipy.workflows


.. currentmodule:: dipy.workflows.align


:class:`ResliceFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResliceFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`SlrWithQbxFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SlrWithQbxFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ImageRegistrationFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageRegistrationFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ApplyTransformFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ApplyTransformFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`SynRegistrationFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SynRegistrationFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`MotionCorrectionFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MotionCorrectionFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`BundleWarpFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleWarpFlow
  :members:
  :undoc-members:
  :show-inheritance:

check_dimensions
~~~~~~~~~~~~~~~~

.. autofunction:: check_dimensions



.. currentmodule:: dipy.workflows.base


:class:`IntrospectiveArgumentParser`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IntrospectiveArgumentParser
  :members:
  :undoc-members:
  :show-inheritance:

get_args_default
~~~~~~~~~~~~~~~~

.. autofunction:: get_args_default


none_or_dtype
~~~~~~~~~~~~~

.. autofunction:: none_or_dtype



.. currentmodule:: dipy.workflows.cli

run
~~~

.. autofunction:: run



.. currentmodule:: dipy.workflows.combined_workflow


:class:`CombinedWorkflow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CombinedWorkflow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.denoise


:class:`Patch2SelfFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Patch2SelfFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`NLMeansFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NLMeansFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`LPCAFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: LPCAFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`MPPCAFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: MPPCAFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`GibbsRingingFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GibbsRingingFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.docstring_parser


:class:`Reader`
~~~~~~~~~~~~~~~


.. autoclass:: Reader
  :members:
  :undoc-members:
  :show-inheritance:


:class:`NumpyDocString`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NumpyDocString
  :members:
  :undoc-members:
  :show-inheritance:

dedent_lines
~~~~~~~~~~~~

.. autofunction:: dedent_lines



.. currentmodule:: dipy.workflows.flow_runner

get_level
~~~~~~~~~

.. autofunction:: get_level


run_flow
~~~~~~~~

.. autofunction:: run_flow



.. currentmodule:: dipy.workflows.io


:class:`IoInfoFlow`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IoInfoFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`FetchFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: FetchFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`SplitFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: SplitFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ConcatenateTractogramFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConcatenateTractogramFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ConvertSHFlow`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvertSHFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ConvertTensorsFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvertTensorsFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ConvertTractogramFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConvertTractogramFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`NiftisToPamFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NiftisToPamFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`TensorToPamFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorToPamFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`PamToNiftisFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PamToNiftisFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.mask


:class:`MaskFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: MaskFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.multi_io


:class:`IOIterator`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IOIterator
  :members:
  :undoc-members:
  :show-inheritance:

common_start
~~~~~~~~~~~~

.. autofunction:: common_start


slash_to_under
~~~~~~~~~~~~~~

.. autofunction:: slash_to_under


connect_output_paths
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: connect_output_paths


concatenate_inputs
~~~~~~~~~~~~~~~~~~

.. autofunction:: concatenate_inputs


basename_without_extension
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: basename_without_extension


io_iterator
~~~~~~~~~~~

.. autofunction:: io_iterator



.. currentmodule:: dipy.workflows.nn


:class:`EVACPlusFlow`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EVACPlusFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.reconst


:class:`ReconstMAPMRIFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstMAPMRIFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstDtiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDtiFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstDsiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDsiFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstCSDFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSDFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstCSAFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSAFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstDkiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDkiFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstIvimFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstIvimFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`ReconstRUMBAFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstRUMBAFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.segment


:class:`MedianOtsuFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MedianOtsuFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`RecoBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundlesFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`LabelsBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LabelsBundlesFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.stats


:class:`SNRinCCFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SNRinCCFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`BundleAnalysisTractometryFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleAnalysisTractometryFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`LinearMixedModelsFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LinearMixedModelsFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`BundleShapeAnalysis`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleShapeAnalysis
  :members:
  :undoc-members:
  :show-inheritance:

buan_bundle_profiles
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: buan_bundle_profiles



.. currentmodule:: dipy.workflows.tracking


:class:`LocalFiberTrackingPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LocalFiberTrackingPAMFlow
  :members:
  :undoc-members:
  :show-inheritance:


:class:`PFTrackingPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PFTrackingPAMFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.utils

handle_vol_idx
~~~~~~~~~~~~~~

.. autofunction:: handle_vol_idx



.. currentmodule:: dipy.workflows.viz


:class:`HorizonFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: HorizonFlow
  :members:
  :undoc-members:
  :show-inheritance:


.. currentmodule:: dipy.workflows.workflow


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

